Corrected text alignment

--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -2,7 +2,7 @@ div{
     background-color: red;
     color: white;
     font-size: 32px;
-    align-items: center;
+    text-align: center;
     font-weight: bold;
 }
 
